--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,16 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express": "~4.16.1",
+    "mongoose": "^8.7.0",
     "morgan": "~1.9.1",
-    "nodemon": "^3.1.7"
+    "node-fetch": "2",
+    "nodemon": "^3.1.7",
+    "uid2": "^1.0.0"
   }
 }
