--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.8",
+    "modal": "^1.2.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^5.3.0"
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
