--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.8",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.9.0",
+    "dotenv": "^16.4.5",
     "modal": "^1.2.0",
     "next": "12.1.6",
     "react": "18.1.0",
@@ -20,6 +23,7 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "stripe": "^17.2.1",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
