--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "stripe": "^17.2.1",
