--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.7.0",
     "morgan": "~1.9.1",
     "node-fetch": "2",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "stripe": "^17.2.1",
     "uid2": "^1.0.0"
