--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "stripe": "^17.2.1",
-    "uid2": "^1.0.0"
+    "uid2": "^1.0.0",
+    "vercel": "^37.14.0"
   }
 }
